--- a/index-2.html
+++ b/index-2.html
@@ -289,79 +289,34 @@
                     </h1>
                 </div>
                 <div class="mainProductLogo py-5">
-                    <div class="d-flex justify-content-center my-4 px-4">
-                        <div class="textFadeRight">
-                            <b class="">
-                                Известная с древности пряность по <br> праву считается не только
-                            </b>
-                            <br>
-                            ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
-                            при
-                            заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
-                            полезные
-                            свойства есть <br> у этого растения
+                    <div class="row">
+                        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                            <div class="textFadeRight">
+                                <b class="">
+                                    Известная с древности пряность по <br> праву считается не только
+                                </b>
+                                <br>
+                                ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
+                                при
+                                заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
+                                полезные
+                                свойства есть <br> у этого растения
+                            </div>
                         </div>
-                        <div class="mx-auto px-0"></div>
-                        <div class="textFadeLeft">
-                            <b class="">
-                                Известная с древности пряность по <br> праву считается не только
-                            </b>
-                            <br>
-                            ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
-                            при
-                            заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
-                            полезные
-                            свойства есть <br> у этого растения
+                        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                         </div>
-                    </div>
-                    <div class="d-flex justify-content-center my-4 px-4">
-                        <div class="textFadeRight">
-                            <b class="">
-                                Известная с древности пряность по <br> праву считается не только
-                            </b>
-                            <br>
-                            ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
-                            при
-                            заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
-                            полезные
-                            свойства есть <br> у этого растения
-                        </div>
-                        <div class="mx-auto"></div>
-                        <div class="textFadeLeft">
-                            <b class="">
-                                Известная с древности пряность по <br> праву считается не только
-                            </b>
-                            <br>
-                            ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
-                            при
-                            заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
-                            полезные
-                            свойства есть <br> у этого растения
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-center my-4 px-4">
-                        <div class="textFadeRight">
-                            <b class="">
-                                Известная с древности пряность по <br> праву считается не только
-                            </b>
-                            <br>
-                            ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
-                            при
-                            заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
-                            полезные
-                            свойства есть <br> у этого растения
-                        </div>
-                        <div class="mx-auto"></div>
-                        <div class="textFadeLeft">
-                            <b class="">
-                                Известная с древности пряность по <br> праву считается не только
-                            </b>
-                            <br>
-                            ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
-                            при
-                            заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
-                            полезные
-                            свойства есть <br> у этого растения
+                        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                            <div class="textFadeLeft">
+                                <b class="">
+                                    Известная с древности пряность по <br> праву считается не только
+                                </b>
+                                <br>
+                                ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
+                                при
+                                заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
+                                полезные
+                                свойства есть <br> у этого растения
+                            </div>
                         </div>
                     </div>
                 </div>
