--- a/index.html
+++ b/index.html
@@ -270,183 +270,61 @@
                 <div class="">
 
                 </div>
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="for-whom">
-                                <div class="row">
-                                    <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
-                                        <div class="text-center peopleMobile">
-                                            <img class="img-fluid" src="img/for_children.png" alt="">
-                                            <img class="img-fluid" src="img/for_adults.png" alt="">
-                                            <img class="img-fluid" src="img/for_olds.png" alt="">
-                                        </div>
-                                        <div>
-                                            <ul class="ownUl for-whom-ul">
-                                                <li class="ownLi">
-                                                    <p>
-                                                        <strong>Известная с древности пряность по праву считается не
-                                                            только</strong>
-                                                        <br>
-                                                        ароматическим, но и лекарственным растением. Черный тмин
-                                                        используют в медицине при заболеваниях кишечника, в
-                                                        косметологии, в ароматерапии. <br> Узнаем, какие еще полезные
-                                                        свойства есть у этого растения
-                                                    </p>
-                                                </li>
-                                                <li class="ownLi">
-                                                    <p>
-                                                        <strong>Известная с древности пряность по праву считается не
-                                                            только</strong>
-                                                        <br>
-                                                        ароматическим, но и лекарственным растением. Черный тмин
-                                                        используют в медицине при заболеваниях кишечника, в
-                                                        косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
-                                                        свойства есть у этого растения
-                                                    </p>
-                                                </li>
-                                                <li class="ownLi">
-                                                    <p>
-                                                        <strong>Известная с древности пряность по праву считается не
-                                                            только</strong>
-                                                        <br>
-                                                        ароматическим, но и лекарственным растением. Черный тмин
-                                                        используют в медицине при заболеваниях кишечника, в
-                                                        косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
-                                                        свойства есть у этого растения
-                                                    </p>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
-                                        <div>
-                                            <img class="main-product-1 float-lg-end" src="img/main-product-1.png"
-                                                 alt=""/>
-                                        </div>
-                                    </div>
+                <div class="">
+                    <div class="for-whom">
+                        <div class="row">
+                            <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
+                                <div class="text-center peopleMobile">
+                                    <img class="img-fluid" src="img/for_children.png" alt="">
+                                    <img class="img-fluid" src="img/for_adults.png" alt="">
+                                    <img class="img-fluid" src="img/for_olds.png" alt="">
+                                </div>
+                                <div>
+                                    <ul class="ownUl for-whom-ul">
+                                        <li class="ownLi">
+                                            <p>
+                                                <strong>Известная с древности пряность по праву считается не
+                                                    только</strong>
+                                                <br>
+                                                ароматическим, но и лекарственным растением. Черный тмин
+                                                используют в медицине при заболеваниях кишечника, в
+                                                косметологии, в ароматерапии. <br> Узнаем, какие еще полезные
+                                                свойства есть у этого растения
+                                            </p>
+                                        </li>
+                                        <li class="ownLi">
+                                            <p>
+                                                <strong>Известная с древности пряность по праву считается не
+                                                    только</strong>
+                                                <br>
+                                                ароматическим, но и лекарственным растением. Черный тмин
+                                                используют в медицине при заболеваниях кишечника, в
+                                                косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
+                                                свойства есть у этого растения
+                                            </p>
+                                        </li>
+                                        <li class="ownLi">
+                                            <p>
+                                                <strong>Известная с древности пряность по праву считается не
+                                                    только</strong>
+                                                <br>
+                                                ароматическим, но и лекарственным растением. Черный тмин
+                                                используют в медицине при заболеваниях кишечника, в
+                                                косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
+                                                свойства есть у этого растения
+                                            </p>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="for-whom">
-                                <div class="row">
-                                    <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
-                                        <div class="text-center">
-                                            <img class="img-fluid" src="img/for_children.png" alt="">
-                                            <img class="img-fluid" src="img/for_adults.png" alt="">
-                                            <img class="img-fluid" src="img/for_olds.png" alt="">
-                                        </div>
-                                        <div>
-                                            <ul class="for-whom-ul">
-                                                <li class="for-whom-li">
-                                                    <p>
-                                                        <strong>Известная с древности пряность по праву считается не
-                                                            только</strong>
-                                                        <br>
-                                                        ароматическим, но и лекарственным растением. Черный тмин
-                                                        используют в медицине при заболеваниях кишечника, в
-                                                        косметологии, в ароматерапии. <br> Узнаем, какие еще полезные
-                                                        свойства есть у этого растения
-                                                    </p>
-                                                </li>
-                                                <li class="for-whom-li">
-                                                    <p>
-                                                        <strong>Известная с древности пряность по праву считается не
-                                                            только</strong>
-                                                        <br>
-                                                        ароматическим, но и лекарственным растением. Черный тмин
-                                                        используют в медицине при заболеваниях кишечника, в
-                                                        косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
-                                                        свойства есть у этого растения
-                                                    </p>
-                                                </li>
-                                                <li class="for-whom-li">
-                                                    <p>
-                                                        <strong>Известная с древности пряность по праву считается не
-                                                            только</strong>
-                                                        <br>
-                                                        ароматическим, но и лекарственным растением. Черный тмин
-                                                        используют в медицине при заболеваниях кишечника, в
-                                                        косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
-                                                        свойства есть у этого растения
-                                                    </p>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
-                                        <div>
-                                            <img class="main-product-1 float-lg-end" src="img/main-product-1.png"
-                                                 alt=""/>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="for-whom">
-                                <div class="row">
-                                    <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
-                                        <div class="text-center">
-                                            <img class="img-fluid" src="img/for_children.png" alt="">
-                                            <img class="img-fluid" src="img/for_adults.png" alt="">
-                                            <img class="img-fluid" src="img/for_olds.png" alt="">
-                                        </div>
-                                        <div>
-                                            <ul class="for-whom-ul">
-                                                <li class="for-whom-li">
-                                                    <p>
-                                                        <strong>Известная с древности пряность по праву считается не
-                                                            только</strong>
-                                                        <br>
-                                                        ароматическим, но и лекарственным растением. Черный тмин
-                                                        используют в медицине при заболеваниях кишечника, в
-                                                        косметологии, в ароматерапии. <br> Узнаем, какие еще полезные
-                                                        свойства есть у этого растения
-                                                    </p>
-                                                </li>
-                                                <li class="for-whom-li">
-                                                    <p>
-                                                        <strong>Известная с древности пряность по праву считается не
-                                                            только</strong>
-                                                        <br>
-                                                        ароматическим, но и лекарственным растением. Черный тмин
-                                                        используют в медицине при заболеваниях кишечника, в
-                                                        косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
-                                                        свойства есть у этого растения
-                                                    </p>
-                                                </li>
-                                                <li class="for-whom-li">
-                                                    <p>
-                                                        <strong>Известная с древности пряность по праву считается не
-                                                            только</strong>
-                                                        <br>
-                                                        ароматическим, но и лекарственным растением. Черный тмин
-                                                        используют в медицине при заболеваниях кишечника, в
-                                                        косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
-                                                        свойства есть у этого растения
-                                                    </p>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
-                                        <div>
-                                            <img class="main-product-1 float-lg-end" src="img/main-product-1.png"
-                                                 alt=""/>
-                                        </div>
-                                    </div>
+                            <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
+                                <div>
+                                    <img class="main-product-1 float-lg-end" src="img/main-product-1.png"
+                                         alt=""/>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-pagination"></div>
-
-                    <!-- If we need navigation buttons -->
-                    <!--<div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-scrollbar"></div>-->
                 </div>
                 <div class="text-center py-5">
                     <h1 class="title-h1" style="color: #000">
