--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <div class="card product-card my-5">
                             <div class="card-body">
                                 <div class="">
-                                    <img src="img/bottle-1.png" class="img-fluid" alt="">
+                                    <img src="img/bottle-2.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="my-2">
                                     <span class="product-card-font me-auto">Кыст аль хинди</span>
@@ -231,7 +231,7 @@
                         <div class="card product-card my-5">
                             <div class="card-body">
                                 <div class="">
-                                    <img src="img/bottle-1.png" class="img-fluid" alt="">
+                                    <img src="img/bottle-3.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="my-2">
                                     <span class="product-card-font me-auto">Масло Омега 3</span>
@@ -374,7 +374,7 @@
                                     </div>
                                     <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
                                         <div>
-                                            <img class="main-product-1 float-lg-end" src="img/main-product-1.png"
+                                            <img class="main-product-1 float-lg-end" src="img/main-product-2.png"
                                                  alt=""/>
                                         </div>
                                     </div>
@@ -430,7 +430,7 @@
                                     </div>
                                     <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
                                         <div>
-                                            <img class="main-product-1 float-lg-end" src="img/main-product-1.png"
+                                            <img class="main-product-1 float-lg-end" src="img/main-product-3.png"
                                                  alt=""/>
                                         </div>
                                     </div>
@@ -547,7 +547,7 @@
         <div class="container">
             <div class="text-center py-5">
                 <h1 class="title-h1-gold">
-                    <span>Видео отзывы</span>
+                    <span>Видео о пользе тмина</span>
                 </h1>
             </div>
             <div class="row text-center">
