--- a/omega.html
+++ b/omega.html
@@ -171,7 +171,7 @@
         <div class="container-fluid">
             <div class="text-center">
                 <h1 class="title-h1 my-4">
-                    <span class="fw-bolder">ПОЛЬЗА В ОРГАНИЗМ</span>
+                    <span class="fw-bolder">ПОЛЬЗА В ОРГАНИЗМУ</span>
                 </h1>
             </div>
             <div class="digitalHuman text-white">
@@ -180,12 +180,14 @@
                         <div class="d-flex justify-content-center my-5">
                             <div class="textFadeRight">
                                 <b class="">
-                                    Сердечно сосудистая система:
+                                    Известная с древности пряность по <br> праву считается не только
                                 </b>
-                                <br>При употреблении масла существенно снижаются 
-                                риски развития атеросклероза и тромбофлебита, 
-                                уменьшается ломкость и проницаемость капилляров, 
-                                снижается артериальное давление.                            
+                                <br>
+                                ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
+                                при
+                                заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
+                                полезные
+                                свойства есть <br> у этого растения
                             </div>
                             <div class="textFadeRightImg">
                                 <img src="img/heart.png" class="img-fluid m-4" alt=""/>
@@ -194,14 +196,14 @@
                         <div class="d-flex justify-content-center my-5">
                             <div class="textFadeRight">
                                 <b class="">
-                                    Болезни суставов
+                                    Известная с древности пряность по <br> праву считается не только
                                 </b>
                                 <br>
-                                Лечебные свойства масла черного тмина позволяют ему 
-                                бороться с воспалительными заболеваниями суставов, 
-                                например, с артрозом и остеохондрозом. Также оно может 
-                                применяться как дополнительное средство в лечении подагры 
-                                и пуринового обмена, но только в сочетании с медикаментозными препаратами.
+                                ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
+                                при
+                                заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
+                                полезные
+                                свойства есть <br> у этого растения
                             </div>
                             <div class="textFadeRightImg">
                                 <img src="img/bones.png" class="img-fluid m-4" alt=""/>
@@ -210,11 +212,14 @@
                         <div class="d-flex justify-content-center my-5">
                             <div class="textFadeRight">
                                 <b class="">
-                                    Заболевания почек
+                                    Известная с древности пряность по <br> праву считается не только
                                 </b>
                                 <br>
-                                Также он предотвращает образование камней в почках, 
-                                защищает организм от повреждения печени и почек и от остеопороза.
+                                ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
+                                при
+                                заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
+                                полезные
+                                свойства есть <br> у этого растения
                             </div>
                             <div class="textFadeRightImg">
                                 <img src="img/kidneys.png" class="img-fluid m-4" alt=""/>
@@ -228,14 +233,14 @@
                             </div>
                             <div class="textFadeLeft">
                                 <b class="">
-                                    Заболевания легких
+                                    Известная с древности пряность по <br> праву считается не только
                                 </b>
                                 <br>
-                                Успокаивающее воздействие масла черного тмина делает 
-                                его отличным природным дополняющим средством для поддержания 
-                                здоровья легких. Одно исследование показало, что масло черного 
-                                тмина уменьшает воспаление дыхательных путей и способствует 
-                                свободному дыханию.
+                                ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
+                                при
+                                заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
+                                полезные
+                                свойства есть <br> у этого растения
                             </div>
                         </div>
                         <div class="d-flex justify-content-center my-5">
@@ -244,14 +249,14 @@
                             </div>
                             <div class="textFadeLeft">
                                 <b class="">
-                                    Желудочно кишечные заболевания
+                                    Известная с древности пряность по <br> праву считается не только
                                 </b>
                                 <br>
-                                Особую эффективность он имеет при нарушениях работы 
-                                пищеварительной системы: улучшает метаболизм; 
-                                избавляет от колик и вздутия; нормализует работу ЖКТ, 
-                                снимает спазмы; восстанавливает обмен веществ; улучшает 
-                                состояние организма при запорах и язве.
+                                ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
+                                при
+                                заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
+                                полезные
+                                свойства есть <br> у этого растения
                             </div>
                         </div>
                         <div class="d-flex justify-content-center my-5">
@@ -260,13 +265,14 @@
                             </div>
                             <div class="textFadeLeft">
                                 <b class="">
-                                    Болезни печени
+                                    Известная с древности пряность по <br> праву считается не только
                                 </b>
                                 <br>
-                                Тминное масло крайне хорошо поддерживает печень, его рекомендовано 
-                                употреблять при различных печеночных заболеваниях — циррозе, ишемии, 
-                                воспалительном процессе, при различных гепатитах. Масло выводит из 
-                                печени токсины, снимает воспаление, спазм, восстанавливает ее структуру.
+                                ароматическим, но и лекарственным <br> растением. Черный тмин используют<br> в медицине
+                                при
+                                заболеваниях кишечника,<br> в косметологии, в ароматерапии. Узнаем,<br> какие еще
+                                полезные
+                                свойства есть <br> у этого растения
                             </div>
                         </div>
                     </div>
@@ -279,7 +285,7 @@
             <div class="container py-5">
                 <div class="text-center py-5">
                     <h1 class="title-h1" style="color: #000">
-                        <span>Полезные свойства</span>
+                        <span>ДЛЯ КОГО ПОДХОДИТ?</span>
                     </h1>
                 </div>
                 <div class="mainProductLogo py-5">
@@ -339,12 +345,13 @@
                                         </div>
                                         <div>
                                             <p class="cards-reviews-p">
-                                                Кыст аль хинди в капсулах я купила в компании UMMED, 
-                                                мне его посоветовали знакомые женщины. В виде капсулы 
-                                                намного удобнее, пью как обычные витамины. Я пью его 2 
-                                                раз в день по 3 капсуле. Лично мне он очень хорошо помог 
-                                                при воспалении органов малого таза. Я принимала его 
-                                                3 месяца, и результат не заставил себя ждать!
+                                                "Что самое главное в этой жизни? Конечно же здоровье, это
+                                                самое
+                                                ценное, что есть у человека и он должен беречь его смолоду.
+                                                Подарите
+                                                своим близким лучший халал продукт масло черного тмина от
+                                                компании
+                                                BioHAYAT, ведь Ваши близкие этого достойны!"
                                             </p>
                                         </div>
                                     </div>
@@ -371,14 +378,13 @@
                                         </div>
                                         <div>
                                             <p class="cards-reviews-p">
-                                                О кыст хинди узнала сравнительно недавно, 
-                                                до этого пила масло черного тмина, но во 
-                                                время беременности его строго настрого нельзя. 
-                                                Решила попробовать этот волшебный продукт, хорошо, 
-                                                что беременным его можно, особенно во время простуды, 
-                                                но не более трех капсул в день в два приема. Я довольна 
-                                                этим чудодейственным растением, которое без вреда для 
-                                                моего будущего малыша, помог мне побороть и кашель, и насморк. 
+                                                "Что самое главное в этой жизни? Конечно же здоровье, это
+                                                самое
+                                                ценное, что есть у человека и он должен беречь его смолоду.
+                                                Подарите
+                                                своим близким лучший халал продукт масло черного тмина от
+                                                компании
+                                                BioHAYAT, ведь Ваши близкие этого достойны!"
                                             </p>
                                         </div>
                                     </div>
@@ -405,14 +411,13 @@
                                         </div>
                                         <div>
                                             <p class="cards-reviews-p">
-                                                Купил продукт Кыст-аль-хинди в компании UMMED в виде капсулы. Очень 
-                                                удобно при употреблении, так как кыст очень горькая. 
-                                                Благодаря тщательной консультации 
-                                                быстро начали принимать продукт и начали 
-                                                ощущать благотворное влияние на организм. Улучшилось 
-                                                общее состояние тела у всех членов моей семьи. 
-                                                Лечит проблемы горла, легких, оказывает благоприятное 
-                                                и исцеляющее воздействие на весь организм.
+                                                "Что самое главное в этой жизни? Конечно же здоровье, это
+                                                самое
+                                                ценное, что есть у человека и он должен беречь его смолоду.
+                                                Подарите
+                                                своим близким лучший халал продукт масло черного тмина от
+                                                компании
+                                                BioHAYAT, ведь Ваши близкие этого достойны!"
                                             </p>
                                         </div>
                                     </div>
